# PrincetonAfeez-Portfolio

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  manage.py  package-lock.json  package.json  princetonafeez_portfolio_docs.md  pyproject.toml  railway.toml  tailwind.config.cjs
.github/workflows/: ci.yml
Schema/: README.md  breadcrumb.schema.json  combined-schema.json  person.schema.json  portfolio-page.schema.json  website.schema.json
content/: README.md  apps.yaml
core/: asgi.py  context_processors.py  logging_config.py  middleware.py  sitemaps.py  urls.py  wsgi.py
core/settings/: base.py  dev.py  prod.py  test.py
core/tests/: test_context_processors.py  test_middleware.py  test_prod_settings.py
docs/: ADRS.md  LICENSE.md  README.md  SPEC.md
docs/notes/: content.txt  project-tree.txt  technical docs.txt
e2e/: axe_helpers.py  conftest.py  test_smoke_a11y.py
pages/: apps.py  content.py  urls.py  views.py
pages/templates/: 404.html  500.html  base.html
pages/templates/components/: case_study_card.html  chip.html  footer.html  navbar.html  (+1 more)
pages/templatetags/: nav_tags.py
pages/tests/: test_template_tags.py  test_views.py
portfolio/: admin.py  apps.py  models.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py
portfolio/templatetags/: doc_tags.py
portfolio/tests/: test_models.py  test_seed_apps.py  test_template_tags.py  test_urls.py  test_views.py
requirements/: base.txt  dev.txt
static/css/: site.css  tw-compiled.css
static/img/: README.md
static/js/: icons-init.js
static/resume/: README.md
(+16 files in other folders)
